--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -4,4 +4,4 @@ The two fields of "cryptography" and "machine learning" studies have produced gr
 
 \subsection{Roadmap}
 
-In this report we will analyze the work that we done on the CryptoNets. The project is based on the paper "CryptoNets: Applying Neural Networks to Encrypted Data with High Throughput and Accuracy", developed by Microsoft researchers. The report is structured as follows: in Section 2 we analyze how the cryptographic algorithm works. In Section 3 we give a description of the neural network and of some problems arising in the use of the cryptographic scheme. In Section 4 we introduce the Microsoft software SEAL library used in this project and to follow, in Section 5, we describe the rest of the code developed. The report closes with the presentation of the results obtained in Section 6 and the conclusion in Section 7.
+In this report we will analyze the work that we done on the CryptoNets. The project is based on \cite{dowlin2016cryptonets}, developed by Microsoft researchers. The report is structured as follows: in Section 2 we analyze how the cryptographic algorithm works. In Section 3 we give a description of the neural network and of some problems arising in the use of the cryptographic scheme. In Section 4 we introduce the Microsoft software SEAL library used in this project and to follow, in Section 5, we describe the rest of the code developed. The report closes with the presentation of the results obtained in Section 6 and the conclusion in Section 7.
