--- a/report/neuralnetwork.tex
+++ b/report/neuralnetwork.tex
@@ -85,4 +85,4 @@ The convolution layer takes images with 28x28 pixel as input. However, since lar
 
 \subsection{Training}
 
-As explained in \cite{dowlin2016cryptonets}, this project is entirely focused on the inference phase, so we make the assumption that the cloud already has a model. In our case, as in the original project case, it would be a neural network that was previously trained using a set of unencrypted data. We used the gradient descent method, with a learning rate of 0.001, batch size of 100 and 30 training periods. The dataset is divided into a training set of 55,000 pairs of image-predictions, and another 10,000 pairs in the test set. The accuracy achieved in this phase, without applying any of the previously described techniques, is over 95\% (more on this in the Section 6: Results).
+As explained in \cite{dowlin2016cryptonets}, this project is entirely focused on the inference phase, so we make the assumption that the cloud already has a model. In our case, as in the original project case, it would be a neural network that was previously trained using a set of unencrypted data. We used the gradient descent method, with a learning rate of 0.001, batch size of 100 and 50 training epochs. The dataset is divided into a training set of 55,000 pairs of image-predictions, and another 10,000 pairs in the test set. The accuracy achieved in this phase, without applying any of the previously described techniques, is 98.43\% (more on this in the Section 6: Results).
