--- a/report/report.tex
+++ b/report/report.tex
@@ -10,6 +10,8 @@
 \usepackage{float}
 \usepackage{multirow}
 \usepackage{listings}
+\usepackage{array}
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 
 \usepackage{indentfirst}
 \usepackage{tensor}
