--- a/report/neuralnetwork.tex
+++ b/report/neuralnetwork.tex
@@ -41,7 +41,7 @@ The polynomial-scalar sum is more complicated. What we want to obtain is that ev
     b+bx+bx^2+...+bx^{n-1}
 \end{equation*}
 
-But adding this polynomial would not give the desired result. This is due to the type of encoding used, ie CRT batching. In particular, this type encoding spreads the information of the various inputs on all the coefficients. That is, given the polynomial $(a_0 + a_1x + ... + a_{n-1}x^{n-1})$, $a_0$ does not correspond to the value of the pixel taken from the first image and $a_1$ does not correspond to the value of the pixel taken from the second image. Rather, $a_0$ contains part of the pixel values of all images, which is the quantity to be added to each coefficient during decoding. What we need to do is, therefore, encode an array so constructed: $\left[ \begin{matrix}b&b&...&b\end{matrix} \right]$ with CRT batching and use the resulting polynomial during computation in the neural network. The polynomial that is obtained in this way is the following:
+But adding this polynomial would not give the desired result. This is due to the type of encoding used, ie CRT batching. In particular, this type of encoding spreads the information of the various inputs on all the coefficients. That is, given the polynomial $(a_0 + a_1x + ... + a_{n-1}x^{n-1})$, $a_0$ does not correspond to the value of the pixel taken from the first image and $a_1$ does not correspond to the value of the pixel taken from the second image. Rather, $a_0$ contains part of the pixel values of all images, which is the quantity to be added to each coefficient during decoding. What we need to do is, therefore, encode an array so constructed: $\left[ \begin{matrix}b&b&...&b\end{matrix} \right]$ with CRT batching and use the resulting polynomial during computation in the neural network. The polynomial that is obtained in this way is the following:
 
 \begin{equation*}
     (b+0x+0x^2+...+0x^{n-1})=b
