--- a/report/projectstructure.tex
+++ b/report/projectstructure.tex
@@ -1,6 +1,6 @@
 \section{The project structure}
 
-The code we developed consists of 5 files (excluding the wrappers, described in the previous section). They are \texttt{train.py}, \texttt{encode.py}, \texttt{infere_plain.py}, \texttt{infere_enc.py} and \texttt{decode.py}. The scripts must be executed one at a time, in a particular order, because they are interdependent: they produce output tensors which are then used by the scripts in the subsequent phases. The tensors are saved in the \texttt{nn_data} and \texttt{output_data} folders. The dataflow is enclosed in the following diagram:
+The code we developed consists of 5 files (excluding the wrappers, described in the previous section). They are \texttt{train.py}, \texttt{pre_encode.py}, \texttt{infere_plain.py}, \texttt{infere_enc.py} and \texttt{post_decode.py}. The scripts must be executed one at a time, in a particular order, because they are interdependent: they produce output tensors which are then used by the scripts in the subsequent phases. The tensors are saved in the \texttt{nn_data} and \texttt{output_data} folders. The dataflow is enclosed in the following diagram:
 
 \begin{figure}[H]
 	\centering
@@ -11,7 +11,7 @@ The code we developed consists of 5 files (excluding the wrappers, described in 
 
 \subsection{\texttt{train.py}}
 
-As you can see from the diagram, the first script to be executed is \texttt{train.py}. It uses 55000 images and labels from the MNIST database to train a neural network, thanks to the TensorFlow library. The only operations used are sum and product. The network is described in detail in the Section3: Neural network.
+As you can see from the diagram, the first script to be executed is \texttt{train.py}. It uses 55000 images and labels from the MNIST database to train a neural network, thanks to the TensorFlow library. The only operations used are sum and product. The network is described in detail in the Section 3: Neural network.
 
 \subsection{\texttt{pre_encode.py}}
 
@@ -44,7 +44,7 @@ for poly_group_index in range(poly_groups_count):
         ...
 \end{lstlisting}
 
-We added also a print function between lines 3 and 4 which indicates the percentage of progress made for this layer. Layers 3 and 5 work as in the case of \texttt{infere_plain.py}, ie use the NumPy .dot() operator. But in this case, the tensor dtype can no longer be np.uint64, but must be of the object type. This is due to the fact that the data in question are reduced modulo $q_i$, while the weights are reduced modulo $t_i$. This means that while the network weights can reach a maximum of 18 bits (unsigned), the input data values are at most 60 bits. During the multiplication between weights and data the values are therefore 78 bits long, before they're reduced modulo $q_i$ and brought back so into the 60 bit limit. If you force a tensor this way, NumPy automatically transforms the output dtype from np.uint64 to np.float64: the 52 bits of mantissa of the np.float64 type are therefore not enough to contain the entire 78-bit information (before it is reduced with the modulo operation), and there is therefore a loss of precision. This would not be much of a problem if we were operating in the plain data space, but since they are encrypted messages, the loss of precision prevents the FV algorithm from correctly reconstructing the output, resulting in a gibberish output. To prevent this from happening, the tensor must then be forced to use the integer type of Python; in fact it has native support for integers greater than the size of a register (64 bits). In order to accomplish this, we created a function called to_object_dtype() that does just that. After performing multiplication with the .dot() operator, we perform the reduction modulo $q_i$, and finally we add the bias multiplied by the scaling factor $k$ (and reduced again modulo $q_i$). Layers 2 and 4 perform squaring using the function inside the SEAL library.
+We added also a print function between lines 3 and 4 which indicates the percentage of progress made for this layer. Layers 3 and 5 work as in the case of \texttt{infere_plain.py}, ie use the NumPy .dot() operator. But in this case, the tensor dtype can no longer be np.uint64, but must be of the object type. This is due to the fact that the data in question are reduced modulo $q_i$, while the weights are reduced modulo $t_i$. This means that while the network weights can reach a maximum of 18 bits (unsigned), the input data values are at most 60 bits. During the multiplication between weights and data the values are therefore 78 bits long, before they get reduced modulo $q_i$, and so brought back into the 60 bit limit. If you force a tensor this way, NumPy automatically transforms the output dtype from np.uint64 to np.float64: the 52 bits of mantissa of the np.float64 type are therefore not enough to contain the entire 78-bit information (before it is reduced with the modulo operation), and there is therefore a loss of precision. This would not be much of a problem if we were operating in the plain data space, but since they are encrypted messages, the loss of precision prevents the FV algorithm from correctly reconstructing the output, resulting in a gibberish output. To prevent this from happening, the tensor must then be forced to use the integer type of Python; in fact it has native support for integers greater than the size of a register (64 bits). In order to accomplish this, we created a function called to_object_dtype() that does just that. After performing multiplication with the .dot() operator, we perform the reduction modulo $q_i$, and finally we add the bias multiplied by the scaling factor $k$ (and reduced again modulo $q_i$). Layers 2 and 4 perform squaring using the function inside the SEAL library.
 
 \subsection{\texttt{post_decode.py}}
 
