--- a/report/seallibrary.tex
+++ b/report/seallibrary.tex
@@ -1,6 +1,6 @@
 \section{SEAL library}
 
-The SEAL library is a C++, open source cryptographic software library, developed by Microsoft. It's the tool we used in our project to code, cipher, decrypt and decode the data to be manipulated. We also used the library for the activation function layers in the neural network. In this section we will show in detail the wrapper we created to invoke the SEAL functions from python.
+The SEAL library is a C++, open source cryptographic software library, developed by Microsoft. It's the tool we used in our project to codify, encrypt, decrypt and decodify the data to be manipulated. We also used the library for the activation function layers in the neural network. In this section we will show in detail the wrapper we created to invoke the SEAL functions from python.
 
 \subsection{The encrypted polynomials ring}
 
@@ -44,7 +44,7 @@ void decrypt_tensor(uint64_t *input, uint64_t *output, int output_axis0_size, in
 void square_tensor(uint64_t *input, uint64_t *output, int input_axis0_size, int data_size)
 \end{lstlisting}
 
-The first function generate a new set of keys for the encryption system, and save them in the folder "keys". The initialize() function loads the those keys in memory to be used; the deallocate() function does the opposite, that is it frees the memory used by the keys and the SEAL library. The three following functions correspond to the three basic operations of encrypting, decrypting and squaring. The important thing to note here is that they take as input an entire tensor, which, in the case of decrypt_tensor($\cdot$) and square_tensor($\cdot$), is a set of encrypted polynomials. encrypt_tensor($\cdot$) instead takes as input a data tensor and converts it into an encrypted polynomial tensor, ie it deals with both CRT batching and actual encryption. Similarly, decrypt_tensor($\cdot$), after decrypting the polynomial tensor, decodes it. The exact number of messages encrypted in output to the encrypt_tensor function depends on the number of images we want to transform, namely input_axis0_size, and the size of each image: data_size. A polynomial of $n$ coefficients can encode up to $n$ values of different images, therefore the number of messages encrypted in output to the function is equal to $\lceil \text{input_axis0_size}/n\rceil\cdot\text{data_size}\cdot5$, where 5 is the number of factors $t_i$ of the $t$ chosen.
+The first function generate a new set of keys for the encryption system, and save them in the folder "keys". The initialize() function loads the those keys in memory to be used; the deallocate() function does the opposite, that is, it frees the memory used by the keys and the SEAL library. The three following functions correspond to the three basic operations of encrypting, decrypting and squaring. The important thing to note here is that they take as input an entire tensor, which, in the case of decrypt_tensor($\cdot$) and square_tensor($\cdot$), is a set of encrypted polynomials. encrypt_tensor($\cdot$) instead takes as input a data tensor and converts it into an encrypted polynomial tensor, ie it deals with both CRT batching and actual encryption. Similarly, decrypt_tensor($\cdot$), after decrypting the polynomial tensor, decodes it. The exact number of messages encrypted in output to the encrypt_tensor function depends on the number of images we want to transform, namely input_axis0_size, and the size of each image: data_size. A polynomial of $n$ coefficients can encode up to $n$ values of different images, therefore the number of messages encrypted in output to the function is equal to $\lceil \text{input_axis0_size}/n\rceil\cdot\text{data_size}\cdot5$, where 5 is the number of factors $t_i$ of the $t$ chosen.
 
 \subsubsection{The Python wrapper}
 
@@ -52,7 +52,7 @@ The python part of the wrapper uses ctypes, the Python module, to call the dynam
 
 \subsection{The selected parameters for the cryptography scheme}
 
-As discussed above, one of the differences between the SEAL version used in \cite{dowlin2016cryptonets} and that we use is the need, in our case, to break down the parameter $q$ into several divisors. This prevents us from using the same identical parameters used by that paper, since the numbers chosen for the parameter $q$ in the original project are prime numbers. We have therefore decided to keep the choices of the other two parameters ($n$ and $t$) identical and to change only $q$. It is important to note that, due to the decomposition of the $t$ parameter, these parameters are not part of a single encryption scheme, but rather there are 5 schemes: one for each $t_i$. So for each $t_i$ we decided to keep the number of coefficients $n$ (as in \cite{dowlin2016cryptonets}), and the parameters $q$ (differently from how it was done in the original project). Therefore, the five schemes are:
+As discussed above, one of the differences between the SEAL version used in \cite{dowlin2016cryptonets} and the one that we use is the need, in our case, to break down the parameter $q$ into several divisors. This prevents us from using the same identical parameters used by that paper, since the numbers chosen for the parameter $q$ in the original project are prime numbers. We have therefore decided to keep the choices of the other two parameters ($n$ and $t$) identical and to change only $q$. It is important to note that, due to the decomposition of the $t$ parameter, these parameters are not part of a single encryption scheme, but rather there are 5 schemes: one for each $t_i$. So for each $t_i$ we decided to keep the number of coefficients $n$ (as in \cite{dowlin2016cryptonets}), and the parameters $q$ (differently from how it was done in the original project). Therefore, the five schemes are:
 
 \begin{center}
 \begin{tabular}{ |c|P{2cm}|P{2cm}|c| } 
